atualizações no fundo006

--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo</title>
     <style>
         body{
             height: 100vh;
@@ -12,6 +12,7 @@
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
         }
         
         main{
@@ -31,6 +32,30 @@
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas doloremque consequuntur nulla. Omnis alias non modi nobis deleniti recusandae vero sunt reprehenderit consequuntur odit, reiciendis voluptatem maxime! Nisi, non in?
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis repudiandae dolorum unde! Optio, recusandae? Impedit tempore autem alias hic vitae, veritatis cum nobis delectus. Sunt aliquid magni consequatur iusto saepe.
         </p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias ad repudiandae, quidem aliquam molestiae ut? Eligendi atque esse error mollitia, ab dolor aperiam eos pariatur aliquam incidunt praesentium! Quasi, velit.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas doloremque consequuntur nulla. Omnis alias non modi nobis deleniti recusandae vero sunt reprehenderit consequuntur odit, reiciendis voluptatem maxime! Nisi, non in?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis repudiandae dolorum unde! Optio, recusandae? Impedit tempore autem alias hic vitae, veritatis cum nobis delectus. Sunt aliquid magni consequatur iusto saepe.
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias ad repudiandae, quidem aliquam molestiae ut? Eligendi atque esse error mollitia, ab dolor aperiam eos pariatur aliquam incidunt praesentium! Quasi, velit.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas doloremque consequuntur nulla. Omnis alias non modi nobis deleniti recusandae vero sunt reprehenderit consequuntur odit, reiciendis voluptatem maxime! Nisi, non in?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis repudiandae dolorum unde! Optio, recusandae? Impedit tempore autem alias hic vitae, veritatis cum nobis delectus. Sunt aliquid magni consequatur iusto saepe.
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias ad repudiandae, quidem aliquam molestiae ut? Eligendi atque esse error mollitia, ab dolor aperiam eos pariatur aliquam incidunt praesentium! Quasi, velit.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas doloremque consequuntur nulla. Omnis alias non modi nobis deleniti recusandae vero sunt reprehenderit consequuntur odit, reiciendis voluptatem maxime! Nisi, non in?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis repudiandae dolorum unde! Optio, recusandae? Impedit tempore autem alias hic vitae, veritatis cum nobis delectus. Sunt aliquid magni consequatur iusto saepe.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias ad repudiandae, quidem aliquam molestiae ut? Eligendi atque esse error mollitia, ab dolor aperiam eos pariatur aliquam incidunt praesentium! Quasi, velit.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas doloremque consequuntur nulla. Omnis alias non modi nobis deleniti recusandae vero sunt reprehenderit consequuntur odit, reiciendis voluptatem maxime! Nisi, non in?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis repudiandae dolorum unde! Optio, recusandae? Impedit tempore autem alias hic vitae, veritatis cum nobis delectus. Sunt aliquid magni consequatur iusto saepe.
+                        </p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias ad repudiandae, quidem aliquam molestiae ut? Eligendi atque esse error mollitia, ab dolor aperiam eos pariatur aliquam incidunt praesentium! Quasi, velit.
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas doloremque consequuntur nulla. Omnis alias non modi nobis deleniti recusandae vero sunt reprehenderit consequuntur odit, reiciendis voluptatem maxime! Nisi, non in?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis repudiandae dolorum unde! Optio, recusandae? Impedit tempore autem alias hic vitae, veritatis cum nobis delectus. Sunt aliquid magni consequatur iusto saepe.
+                            </p>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias ad repudiandae, quidem aliquam molestiae ut? Eligendi atque esse error mollitia, ab dolor aperiam eos pariatur aliquam incidunt praesentium! Quasi, velit.
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas doloremque consequuntur nulla. Omnis alias non modi nobis deleniti recusandae vero sunt reprehenderit consequuntur odit, reiciendis voluptatem maxime! Nisi, non in?
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis repudiandae dolorum unde! Optio, recusandae? Impedit tempore autem alias hic vitae, veritatis cum nobis delectus. Sunt aliquid magni consequatur iusto saepe.
+                                </p>
     </main>
 </body>
 </html>
