--- a/Exercicios/ex023/tabela001.html
+++ b/Exercicios/ex023/tabela001.html
@@ -8,8 +8,9 @@
         body{
             font-family: Arial, Helvetica, sans-serif;
         }
-        
+
         table{
+            height: 400px;
             width: 400px;
             border-collapse: collapse;
         }
@@ -17,6 +18,8 @@
         td{
             border: 1px solid black;
             padding: 10px;
+            text-align: center;
+            vertical-align: top;
         }
     </style>
 </head>
