adicionando efeito zebrado

--- a/Exercicios/ex023/tabela002.html
+++ b/Exercicios/ex023/tabela002.html
@@ -13,6 +13,10 @@
             width: 500px;
             border-collapse: collapse;
         }
+        
+        tbody > tr:nth-child(odd){
+            background-color: lightgray;
+        }
 
         th, td{
             border: 1px solid black;
