--- a/Exercicios/ex026/form006.html
+++ b/Exercicios/ex026/form006.html
@@ -20,7 +20,7 @@
 
         <p>
             <label for="ifoto">Foto:</label>
-            <input type="file" name="foto" id="ifoto">
+            <input type="file" name="foto" id="ifoto"> <!--Precisa der metodo POST-->
         </p>
 
         <p>
