--- a/Exercicios/ex027/mq002/index.html
+++ b/Exercicios/ex027/mq002/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Features Media Querry</title>
+    <!--Media Features-->
     <link rel="stylesheet" href="estilo/style.css" media="all">
     <link rel="stylesheet" href="estilo/empe.css" media="screen and (orientation: portrait)">
     <link rel="stylesheet" href="estilo/deitado.css" media="screen and (orientation: landscape)">
