--- a/Desafios/Desafio09.html
+++ b/Desafios/Desafio09.html
@@ -19,7 +19,7 @@
         <a href="links/CursoHTML.html"><img src="thumb-html.png" alt=""></a>
         <a href="links/JavaScript.html"><img src="thumb-js.png" alt=""></a></p>
     <p>
-    <a href="links/Hardware.html"><img src="thumb-hardware.png" alt=""></a>
+    <a href="links/Hardware.html"><img src="thumb-hardware.png" alt="" id="net"></a>
     <a href="links/Python.html"><img src="thumb-python.png" alt=""></a>
     </p>
     
